src/App.css
html,
body {
    margin: 0;
    height: 100%;
    overflow: hidden;
}

#root,
.appContainer,
.App,
.App > div,
.refresh-view {
    height: 100% !important;
    text-align: center;
}

.ptr__children {
    overflow: hidden !important;
}

.header,
.header-forecast {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    z-index: 2;
    top: 0;
    left: 0;
    width: 100%;
    height: 110px;
    background: rgba(0, 0, 0, 0.6);
    color: #fff;
    overflow: hidden;
    padding: 10px;
    box-sizing: border-box;
    opacity: 1;
    transition: 0.3s;
}

.header.hidden,
.header-forecast.hidden {
    opacity: 0;
    top: -200px;
}

.header h1 {
    margin: 0 0 10px 0;
}

.header h2 {
    margin: 0;
}

.header-forecast {
    height: 50px;
}

.header-forecast h1 {
    font-size: 110%;
}

.weatherImage {
    position: absolute;
    z-index: 1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #fff;
}

.weatherImage img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.container {
    position: fixed;
    width: 100%;
    height: 100%;
    z-index: 1;
    background: red;
}

.footer {
    position: fixed;
    display: flex;
    flex-direction: column;
    justify-content: center;
    z-index: 2;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100px;
    background: rgba(0, 0, 0, 0.6);
    color: #fff;
    overflow: hidden;
    padding: 0 10px;
    box-sizing: border-box;
    opacity: 1;
    transition: 0.3s;
}

.footer.hidden {
    opacity: 0;
    bottom: -200px;
}

.footer nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

.footer nav li {
    display: inline-block;
    padding: 10px;
}

.footer nav li a {
    padding: 20px;
    color: #fff;
    font-weight: bold;
    text-decoration: none;
}

.forecast {
    position: absolute;
    z-index: 2;
    overflow: auto;
    width: 100%;
    height: calc(100% - 150px) !important;
    background: rgba(255, 255, 255, 0.9);
    opacity: 1;
    transition: 0.3s;
}

.forecast.hidden {
    opacity: 0;
}

.forecast ul.threehour {
    list-style: none;
    margin: 20px 0;
    padding: 0;
    width: 100%;
    white-space: nowrap;
    overflow: scroll;
    font-size: 110%;
    touch-action: pan-x;
}

.forecast ul.threehour::-webkit-scrollbar {
    display: none;
}

.forecast ul.threehour li {
    display: inline-block;
    padding: 14px;
}

.forecast ul.threehour li .time,
.forecast ul.threehour li .icon,
.forecast ul.threehour li .temp {
    display: block;
}

.forecast table.daily {
    width: 100%;
    padding: 20px;
    box-sizing: border-box;
    font-size: 120%;
}

.forecast table.daily th {
    text-align: left;
}

.forecast table.daily td.maxTemp,
.forecast table.daily td.minTemp {
    text-align: right;
}

.forecast .icon {
    width: 50px;
    filter: drop-shadow(0 0 1px #000);
}

.overlay {
    position: fixed;
    z-index: 999;
    width: 100%;
    height: 100%;
    background: #efefef;
    display: table;
    visibility: visible;
    opacity: 1;
    transition-delay: 0s;
}

.overlay .content {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
}

.overlay.hidden {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s linear 0.5s, opacity 0.5s linear;
}

.progressBar {
    display: block;
    margin: 0 auto;
    width: 100px;
    height: 20px;
    border: 2px solid #666;
}

.progressBar .fill {
    display: block;
    width: 0;
    height: 20px;
    background: #666;
}

.errorPage {
    position: absolute;
    top: 0;
    left: 0;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background: #333;
    color: #ccc;
}

.errorPage__content {
    align-self: center;
    text-align: center;
}

.errorPage__content h1 {
    margin-top: 0;
}

/* Prevent scroll bounce when viewed as a PWA on iPhone (works on iOS13) */
html,
body {
    position: fixed;
    overflow: hidden;
    width: 100%;
}

